kubernetes/apps/downloads/prowlarr/tools/flaresolverr/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prowlarr-flaresolverr-networkpolicy
  namespace: downloads
spec:
  endpointSelector:
    matchLabels:
      name: prowlarr-flaresolverr
  ingress:
    - fromEndpoints:
        - matchLabels:
            name: prowlarr
      toPorts:
        - ports:
            - port: "8191"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
